# sat-bmc

./: .gitignore  CMakeLists.txt  bmc.cpp
aiger/: aiger.c  aiger.h
aigtocnf/: aig2cnf.cpp  aigtocnf.cpp
minisat/: README
minisat/core/: Solver.cc  Solver.h  SolverTypes.h
minisat/simp/: SimpSolver.cc
minisat/utils/: Options.h
relaxedNewTech/: Alg.h  Alloc.h  Dimacs.h  Heap.h  IntTypes.h  LICENSE  Main_core.cc  Main_simp.cc  Map.h  Options.cc  Options.h  ParseUtils.h  Queue.h  Relaxed  SimpSolver.cc  SimpSolver.h  SimpSolver.or  Solver.cc  Solver.h  Solver.or  SolverTypes.h  Sort.h  System.cc  System.h  Vec.h  XAlloc.h  ipasir.cc  ipasir.h  sat250.cnf  test_ipasir.cc  test_pigeonhole  tmp.cnf
sat-switch/include/: AbsSatSolver.h  AvailableSolvers.h  MinisatSolverFactory.h  RelaxedNewTechFactory.h  SatDefs.h  SolverEnum.h  exceptions.h  sat.h
sat-switch/minisat/: MinisatSolver.cpp  MinisatSolver.h  MinisatSolverFactory.cpp
sat-switch/relaxedNewTech/: RelaxedNewTechFactory.cpp  RelaxedNewTechSolver.cpp  RelaxedNewTechSolver.h
sat-switch/src/: AbsSatSolver.cpp  AvailableSolvers.cpp
